Upgrade docker image to openjdk:11