@@ -1,4 +1,4 @@
-FROM openjdk:8
+FROM openjdk:11
 
 MAINTAINER Marco Vermeulen
 
@@ -6,4 +6,4 @@ RUN mkdir /broker
 
 ADD build/libs /broker
 
-ENTRYPOINT java -Xmx128m -XX:+PrintFlagsFinal -XX:+UseConcMarkSweepGC -XX:+UnlockExperimentalVMOptions -XX:+UseCGroupMemoryLimitForHeap -jar /broker/sdkman-broker-1.0.0-SNAPSHOT-all.jar
+ENTRYPOINT java -Xmx128m -XX:+PrintFlagsFinal -jar /broker/sdkman-broker-1.0.0-SNAPSHOT-all.jar
